<resources>
    <string name="app_name">Alten Management</string>
    <string name="title_home">Home</string>
    <string name="title_follow_up">Follow Up</string>
    <string name="title_qm">QM</string>

    <string name="content_desc_icon_background_swipeable_view">icon for background
        swipeable view</string>
    <string name="content_desc_parent_group_icon">parent group icon</string>

    <string name="category_urgent">Urgente</string>
    <string name="category_warning">Atención</string>
    <string name="category_up_to_day">Ok</string>

    <string name="followup_item_last_date_title">Último :</string>
    <string name="followup_item_next_date_title">Próx. :</string>
    <string name="followup_item_status_title">Estado :</string>

    <!-- NEW_EDIT FollowUp DIALOG -->
    <string name="follow_up_dialog_positive_button">Guardar</string>
    <string name="follow_up_dialog_negative_button">Descartar</string>
    <string name="follow_up_dialog_client">Cliente :</string>
    <string name="follow_up_dialog_consultor">Nombre :</string>
    <string name="follow_up_dialog_last_date_title">Ultimo seguimiento :</string>
    <string name="follow_up_dialog_next_date_checkbox_title">Establecer próximo seguimiento</string>
    <string name="follow_up_dialog_next_date_title">Próximo seguimiento :</string>
    <string name="follow_up_dialog_no_date">Sin fecha</string>
    <string name="follow_up_dialog_no_status">Sin estado</string>


    <!-- DELETE FOLLOWUP DIALOG -->
    <string name="follow_up_dialog_delete_title">Atención</string>
    <string name="follow_up_dialog_delete_message">¿Deseas eliminar este elemento?</string>
    <string name="follow_up_dialog_delete_see_info">Ver info…</string>
    <string name="follow_up_dialog_delete_positive_button">Eliminar</string>
    <string name="follow_up_dialog_delete_negative_button">Cancelar</string>
    <string name="follow_up_dialog_delete_client">Cliente :\u0020</string>
    <string name="follow_up_dialog_delete_consultor">Nombre :\u0020</string>
    <string name="follow_up_dialog_delete_last_date_title">Ultimo seguimiento :\u0020</string>
    <string name="follow_up_dialog_delete_next_date_title">Próximo seguimiento :\u0020</string>
    <string name="follow_up_dialog_delete_status">Status :\u0020</string>

    <!-- FollowUp Error Controller -->
    <string name="follow_up_error_controller_previous_date">Fecha previa a la fecha actual,
        intenta con otra fecha nueva.</string>
    <string name="follow_up_error_controller_newer_date">Fecha más reciente que la fecha actual,
    intenta con otra fecha nueva.</string>
    <string name="follow_up_error_controller_state_with_no_date">Error al establecer fecha y/o
        estado</string>x
    <string name="follow_up_error_controller_empty_field">Campo vacío</string>

    <!-- FollowUp Status -->
    <string name="follow_up_dialog_radio_group_scheduled_value">Planificada</string>
    <string name="follow_up_dialog_radio_group_done_value">Realizada</string>
    <string name="follow_up_dialog_radio_group_cancelled_value">Cancelada</string>


    <!-- QM CATEGORIES-->
    <string name="qm_category_next_week_title">Próxima semana\n%s a %s</string>
    <string name="qm_category_current_week_title">Semana en curso\n%s a %s</string>
    <string name="qm_category_previous_week_title">Semana anterior\n%s a %s</string>
    <string name="qm_category_week_generic_title">Semana\n%s a %s</string>

    <!-- QM fab speed dial -->
    <string name="qm_speed_dial_menu_add_qm">Añadir QM</string>
    <string name="qm_speed_dial_menu_go_to_week">Ir a semana</string>

    <!-- QM  NEW_EDIT DIALOG -->
    <string name="qm_dialog_positive_button">Guardar</string>
    <string name="qm_dialog_negative_button">Descartar</string>
    <string name="qm_dialog_client">Cliente :</string>
    <string name="qm_dialog_consultor">Candidato :</string>
    <string name="qm_dialog_phone_title">Teléfono :</string>
    <string name="qm_dialog_last_date_title">Fecha :</string>
    <string name="qm_dialog_last_date_error_message">Fecha no válida</string>
    <string name="qm_dialog_last_time_title">Hora :</string>
    <string name="qm_dialog_status_error_message">Estado no válido</string>
    <string name="qm_dialog_no_status">Sin estado</string>
    <string name="qm_dialog_no_date">Sin fecha</string>
    <string name="qm_dialog_no_time">Sin hora</string>
    <string name="qm_dialog_no_phone">Sin teléfono</string>

    <!-- QM Status -->
    <string name="qm_dialog_radio_group_scheduled_value">Planificada</string>
    <string name="qm_dialog_radio_group_done_value">Realizada</string>
    <string name="qm_dialog_radio_group_cancelled_value">Cancelada</string>
    <string name="qm_dialog_radio_group_accepted_value">Aceptada</string>


    <!-- QM PHONE NUMBER DIALOG -->
    <string name="qm_phone_input_dialog_number_title">Número :</string>

    <!-- DELETE FOLLOWUP DIALOG -->
    <string name="qm_dialog_delete_title">Atención</string>
    <string name="qm_dialog_delete_message">¿Deseas eliminar este elemento?</string>
    <string name="qm_dialog_delete_see_info">Ver info…</string>
    <string name="qm_dialog_delete_positive_button">Eliminar</string>
    <string name="qm_dialog_delete_negative_button">Cancelar</string>
    <string name="qm_dialog_delete_client">Cliente :\u0020</string>
    <string name="qm_dialog_delete_consultor">Nombre :\u0020</string>
    <string name="qm_dialog_delete_last_date_title">Fecha :\u0020</string>
    <string name="qm_dialog_delete_next_date_title">Hora :\u0020</string>
    <string name="qm_dialog_delete_status">Status :\u0020</string>
</resources>
