<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_followup_new_edit_margin">

    <bcn.alten.altenappmanagement.ui.customview.FUpCustomTextFieldBoxes
        android:id="@+id/textfieldbox_consultor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_followup_new_edit_margin"
        android:layout_marginTop="@dimen/dialog_followup_new_edit_margin"
        app:enabled="true"
        app:errorColor="@color/background_soft_orange"
        app:hasClearButton="true"
        app:hasFocus="true"
        app:iconSignifier="@drawable/ic_person_black_24dp"
        app:labelText="@string/follow_up_dialog_consultor"
        app:maxCharacters="30"
        app:primaryColor="@color/background_soft_dark_blue">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/extended_edittext_consultor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_soft_dark_blue"
            android:textSize="@dimen/followup_dialog_new_edit_consultor_client_fields"
            android:maxLength="30"
            android:maxLines="1" />

    </bcn.alten.altenappmanagement.ui.customview.FUpCustomTextFieldBoxes>

    <bcn.alten.altenappmanagement.ui.customview.FUpCustomTextFieldBoxes
        android:id="@+id/textfieldbox_client_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_followup_new_edit_margin"
        android:layout_marginTop="@dimen/dialog_followup_new_edit_margin"
        app:enabled="true"
        app:errorColor="@color/background_soft_orange"
        app:hasClearButton="true"
        app:iconSignifier="@drawable/ic_business_center_black_24dp"
        app:labelText="@string/follow_up_dialog_client"
        app:maxCharacters="20"
        app:primaryColor="@color/background_soft_dark_blue">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/extended_edittext_client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_soft_dark_blue"
            android:textSize="@dimen/followup_dialog_new_edit_consultor_client_fields"
            android:maxLength="20"
            android:maxLines="1" />

    </bcn.alten.altenappmanagement.ui.customview.FUpCustomTextFieldBoxes>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_followup_new_edit_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fup_dialog_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dialog_followup_new_edit_margin"
            android:text="@string/follow_up_dialog_last_date_title" />

        <TextView
            android:id="@+id/fup_dialog_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:text="@string/follow_up_dialog_no_date"
            android:textColor="@color/background_electric_blue"
            android:textStyle="bold" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/fup_dialog_checkbox_add_next_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_followup_new_edit_margin"
        android:text="@string/follow_up_dialog_next_date_checkbox_title" />

    <LinearLayout
        android:id="@+id/fup_dialog_container_next_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_followup_new_edit_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fup_dialog_next_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dialog_followup_new_edit_margin"
                android:layout_marginEnd="@dimen/dialog_followup_new_edit_margin"
                android:text="@string/follow_up_dialog_next_date_title" />

            <TextView
                android:id="@+id/fup_dialog_next_date_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@string/follow_up_dialog_no_date"
                android:textColor="@color/background_electric_blue"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/fup_dialog_radio_group_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fup_dialog_radio_scheduled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_up_dialog_radio_group_scheduled_value"
                    android:textSize="@dimen/followup_dialog_new_edit_status" />

                <RadioButton
                    android:id="@+id/fup_dialog_radio_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_up_dialog_radio_group_done_value"
                    android:textSize="@dimen/followup_dialog_new_edit_status" />

                <RadioButton
                    android:id="@+id/fup_dialog_radio_cancelled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_up_dialog_radio_group_cancelled_value"
                    android:textSize="@dimen/followup_dialog_new_edit_status" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/fup_dialog_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textSize="@dimen/followup_dialog_new_edit_error_message"
        android:textColor="@color/background_soft_orange"
        android:visibility="visible"/>
</LinearLayout>