<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/qm_item_child"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/followup_item_swipe_foreground_vertical_padding"
    android:paddingEnd="@dimen/followup_item_swipe_foreground_horizontal_padding"
    android:paddingLeft="@dimen/followup_item_swipe_foreground_horizontal_padding"
    android:paddingRight="@dimen/followup_item_swipe_foreground_horizontal_padding"
    android:paddingStart="@dimen/followup_item_swipe_foreground_horizontal_padding"
    android:paddingTop="@dimen/followup_item_swipe_foreground_vertical_padding"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/qm_client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/followup_item_vertical_margin"
        android:maxLength="30"
        android:textSize="@dimen/followup_child_item_consultor_name"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/qm_date_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qm_client_name"
        android:layout_marginBottom="@dimen/followup_item_vertical_margin"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/qm_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qm_dialog_last_date_title" />

        <TextView
            android:id="@+id/qm_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/followup_item_swipe_foreground_last_date_value_horizontal_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qm_time_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/qm_date_container"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/qm_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qm_dialog_last_time_title" />

        <TextView
            android:id="@+id/qm_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/followup_item_swipe_foreground_next_date_container_horizontal_margin" />
    </LinearLayout>



    <TextView
        android:id="@+id/qm_candidate_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/consulter_name"
        android:layout_marginBottom="@dimen/followup_item_vertical_margin"
        android:maxLength="20" />


    <LinearLayout
        android:id="@+id/qm_status_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/qm_candidate_name">

        <TextView
            android:id="@+id/qm_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/followup_item_vertical_margin"
            android:text="@string/followup_item_status_title" />

        <TextView
            android:id="@+id/qm_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/followup_status_color_scheduled" />
    </LinearLayout>
</RelativeLayout>